# shiny-octo-palm-tree

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/include/app/: app.h  bfs.h  graph.h  node.h
example/include/spdlog/fmt/bundled/: format.h  ostream.h  printf.h
example/include/spdlog/sinks/: base_sink.h
example/src/: main.cpp
example/test/: CMakeLists.txt  test_graph_contains.cpp  test_main.cpp  test_not_connected_graph.cpp
skeleton/: CMakeLists.txt
skeleton/include/app/: log.hpp
skeleton/src/: add.cpp  log.cpp  main.cpp
skeleton/test/: CMakeLists.txt  test_add.cpp  test_empty_graph.cpp  test_graph_unique.cpp  test_int.cpp  test_minimalistic.cpp  test_node.cpp
tasks/: CMakeLists.txt
tasks/0_gcd/: README.md
tasks/0_gcd/skeleton/: CMakeLists.txt
tasks/0_gcd/skeleton/src/: gcd.cpp  main.cpp
tasks/0_gcd/skeleton/test/: CMakeLists.txt  test_gcd.cpp
tasks/0_gcd_copy/: README.md
tasks/0_gcd_copy/skeleton/: CMakeLists.txt
tasks/0_gcd_copy/skeleton/src/: gcd.cpp  main.cpp
tasks/0_gcd_copy/skeleton/test/: CMakeLists.txt  test_gcd_copy.cpp
